<resources>
    <string name="app_name">newwater</string>
    <string name="err_reason_title">故障原因：</string>
    <string name="contract_title">，请联系</string>
    <string name="hotwater">热水</string>
    <string name="warmwater">温水</string>
    <string name="coolwater">冷水</string>
    <string name="dixieccup">纸杯</string>
    <string name="exit">退出(20s)</string>
    <string name="Dts">出水DTS</string>
    <string name="jiare">加热</string>
    <string name="zhileng">制冷</string>
    <string name="zhishui">制水</string>
    <string name="chongxi">冲洗</string>
    <string name="openorclose">退出（30）</string>
    <string name="freedrink">免费饮水</string>
    <string name="paydrink">支付饮水</string>
    <string name="seeadtodrink">(需观看广告后才可取水)</string>
    <string name="scan">扫描二维码</string>
    <string name="getwater">方可取水</string>
    <string name="getwaterwarning">请放置好被子,小心烫伤！请按确认</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="accoutnomoney">账户余额不足</string>
    <string name="tobuy">请到微信公众号充值</string>
    <string name="stopgetwater">停止取水</string>
    <string name="getcup">取纸杯</string>
    <string name="getwatering">正在出水</string>
    <string name="getcuping">正在出杯</string>

    <!-- 设备故障原因 start -->
    <string name="break_down_reason_default">设备已坏（错误码：10000）</string>
    <string name="break_down_reason_expired">设备已到期</string>
    <string name="break_down_reason_no_device_id">设备已坏（错误码：10001）</string>
    <string name="break_down_reason_no_device_config">设备已坏（错误码：10002）</string>
    <string name="break_down_reason_no_drink_mode">设备已坏（错误码：10003）</string>
    <string name="break_down_reason_no_contract_info">设备已坏（错误码：10004）</string>
    <string name="break_down_reason_no_rent_deadline">设备已坏（错误码：10005）</string>

    <!-- 设备故障原因 end -->


    <!-- IjkPlayer Start -->
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

    <string name="pref_key_enable_background_play">pref_key_enable_background_play</string>
    <string name="pref_key_player">pref_key_player</string>
    <string name="pref_key_using_media_codec">pref_key_using_media_codec</string>
    <string name="pref_key_using_media_codec_auto_rotate">pref_key_using_media_codec_auto_rotate</string>
    <string name="pref_key_media_codec_handle_resolution_change">pref_key_media_codec_handle_resolution_change</string>
    <string name="pref_key_using_opensl_es">pref_key_using_opensl_es</string>
    <string name="pref_key_pixel_format">pref_key_pixel_format</string>
    <string name="pref_key_enable_no_view">pref_key_enable_no_view</string>
    <string name="pref_key_enable_surface_view">pref_key_enable_surface_view</string>
    <string name="pref_key_enable_texture_view">pref_key_enable_texture_view</string>
    <string name="pref_key_enable_detached_surface_texture">pref_key_enable_detached_surface_texture</string>
    <string name="pref_key_using_mediadatasource">pref_key_using_mediadatasource</string>
    <string name="pref_key_last_directory">pref_key_last_directory</string>

    <!-- IjkPlayer End -->

    <string name="init_device_info_loading">正在初始化设备信息..</string>
    <string name="scan_qcode">打开手机微信，扫描屏幕上方二维码激活系统</string>
    <string name="init_activate_success_welcome">欢迎使用新鸿海新鲜水管理系统!</string>

</resources>
