<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/rightoperate"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hotwater"
            android:layout_width="@dimen/righticowidth"
            android:layout_height="@dimen/righticoheight"
            android:background="@drawable/hotwater"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/red"
            android:text="热水"
            android:textSize="0sp"
            />

        <TextView
            android:id="@+id/warmwater"
            android:background="@drawable/wenshui"
            android:layout_width="@dimen/righticowidth"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="@dimen/righticoheight"
            android:layout_marginTop="5dp"
            android:textSize="0sp"
            android:text="@string/warmwater"
            />

        <TextView
            android:id="@+id/coolwater"
            android:background="@drawable/coolwater"
            android:layout_width="@dimen/righticowidth"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="@dimen/righticoheight"
            android:layout_marginTop="5dp"
            android:text="@string/coolwater"
            android:textSize="0sp"
            />


        <TextView
            android:id="@+id/getcup"
            android:background="@drawable/getcup"
            android:layout_width="@dimen/righticowidth"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/getcup"
            android:layout_height="@dimen/righticoheight"
            android:layout_marginTop="5dp"
            />


    </LinearLayout>


</LinearLayout>