<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/leftoperate"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_toRightOf="@+id/middleimg"
        android:orientation="vertical">


        <!--温度计-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="160dp">
            <ImageView
                android:id="@+id/wenduji"
                android:layout_width="50dp"
                android:layout_height="160dp"
                android:background="@drawable/thermometer"
                />

            <TextView
                android:id="@+id/hotwatertext"
                android:layout_toRightOf="@+id/wenduji"
                android:textColor="@color/redindex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="热93℃"
                />

            <TextView
                android:id="@+id/coolwatertext"
                android:layout_toRightOf="@+id/wenduji"
                android:layout_below="@+id/hotwatertext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueindex"
                android:text="冷18℃"
                android:gravity="bottom"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>
        <!--水质监测-->
        <LinearLayout
            android:layout_width="@dimen/leftonewidth"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="@dimen/shuidiheightall">
            <TextView
                android:layout_width="@dimen/leftonewidth"
                android:layout_height="@dimen/dtsheight"
                android:text="@string/Dts"
                android:textColor="@color/whitercolor"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="5dp"
                />

            <LinearLayout
                android:layout_width="@dimen/leftonewidth"
                android:orientation="vertical"
                android:background="@drawable/shuidi"
                android:layout_height="@dimen/shuidiheight">

                <TextView
                    android:id="@+id/ppmvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="91"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:textSize="@dimen/verybig"
                    android:textColor="@color/blueindex"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ppm"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textSize="@dimen/verybig"
                    android:textColor="@color/blueindex"
                    />

            </LinearLayout>

        </LinearLayout>


        <!--水滴下方-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/yuanshuitds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="原水TDS"
                android:textSize="@dimen/big"
                android:textColor="@color/whitercolor"
                />





            <TextView
                android:id="@+id/ppm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2184ppm"
                android:textColor="@color/whitercolor"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/big"
                />





        </LinearLayout>




        <!--deviceoperate-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/middlemargin"
            >

            <LinearLayout
                android:id="@+id/tobehot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/hotico"
                    android:layout_width="@dimen/littleico"
                    android:layout_height="@dimen/littleico"
                    android:background="@drawable/hot"
                    />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jiare"
                    android:textColor="@color/redindex"
                    android:layout_below="@+id/hotico"
                    android:textSize="@dimen/big"
                    />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/tobecool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_alignParentRight="true"
                >

                <ImageView
                    android:layout_width="@dimen/littleico"
                    android:layout_height="@dimen/littleico"
                    android:background="@drawable/cool"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/zhileng"
                    android:textColor="@color/blueindex"
                    android:gravity="right"
                    android:textSize="@dimen/big"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/zhishui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_below="@+id/tobehot"
                >

                <ImageView
                    android:layout_width="@dimen/littleico"
                    android:layout_height="@dimen/littleico"
                    android:background="@drawable/zhishui"
                    />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zhishui"
                    android:textSize="@dimen/big"
                    android:textColor="@color/whitercolor"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/chongxi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tobecool"
                >
                <ImageView
                    android:layout_width="@dimen/littleico"
                    android:layout_height="@dimen/littleico"
                    android:background="@drawable/clean"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/chongxi"
                    android:textColor="@color/blueindex"
                    android:textSize="@dimen/big"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </RelativeLayout>


        <!--设备操作-->
        <Button
            android:id="@+id/exit"
            android:text="@string/openorclose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big"
            android:textColor="@color/blueindex"
            android:layout_marginLeft="@dimen/little"
            android:layout_marginRight="@dimen/little"
            />




    </LinearLayout>


</LinearLayout>